<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/windowBackground">

    <!-- WELCOME Yazısı -->
    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message_login"
        android:textSize="28sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textColor="?attr/colorOnSurface"/>

    <!-- Name Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:textColor="?attr/colorOnSurface"/>

    <!-- Name TextBox -->
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/name_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="20dp"
        android:gravity="start|center_vertical" />

    <!-- Surname Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/surname"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:textColor="?attr/colorOnSurface"/>

    <!-- Surname TextBox -->
    <EditText
        android:id="@+id/et_surname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/surname_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="20dp"
        android:gravity="start|center_vertical" />

    <!-- E-mail Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_label"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:textColor="?attr/colorOnSurface"/>

    <!-- E-mail TextBox -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="20dp"
        android:gravity="start|center_vertical" />

    <!-- Password Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_label"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:textColor="?attr/colorOnSurface"/>

    <!-- Password TextBox -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="20dp"
        android:gravity="start|center_vertical" />

    <!-- Password Again Label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_again_label"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:gravity="start"
        android:textColor="?attr/colorOnSurface"/>

    <!-- Password Again TextBox -->
    <EditText
        android:id="@+id/et_password_again"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password_again_hint"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_dark"
        android:textSize="16sp"
        android:inputType="textPassword"
        android:padding="10dp"
        android:background="@android:drawable/edit_text"
        android:layout_marginBottom="20dp"
        android:gravity="start|center_vertical" />

    <!-- Button ve ProgressBar için konteyner -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#FF5722"
            android:paddingHorizontal="20dp"
            android:text="@string/sign_in"
            android:textColor="#FFFFFF" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="16dp"
            android:layout_toStartOf="@id/btn_sign_in"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>